src/features/Container/Protocols/SourcePDFPanel/PdfViewer.scss
[class*='react-pdf__Page__canvas'] {
  display: table !important;
  margin-left: auto;
  margin-right: auto;
  width: unset !important;
}

.pdf-pagination {
  display: flex;
  align-items: center;
  bottom: 15px;
  position: absolute;
  justify-content: space-between;
  overflow: auto;
  box-sizing: border-box;
  height: 52px;
  width: 320px;
  border: 1px solid #e9e9e9;
  border-radius: 4px;
  background-color: #f6f7fb;
  left: 0;
  right: 0;
  margin: auto;
  div:first-child {
    max-width: 230px;
  }

  .buttonStyles {
    width: 24px;
    height: 25px;
    line-height: 45px;
    text-align: center;
    padding: 2px;
    border-radius: 50%;
    background-color: #595959;
    color: #fff;
    min-width: auto !important;
    left: 2px;
    margin-right: 10px;
    justify-content: center;

    svg {
      height: 16px;
      width: 16px;
    }
  }
  .zoom-controls {
    display: flex;
  }
}

.pdf-pagination div:first-child {
  max-width: 230px;
}

@media only screen and (max-width: 1366px) {
  .pdf-pagination {
    height: 42px;
    width: 265px;

    div:first-child {
      max-width: 230px;
    }

    button {
      height: 20px !important;
      width: 20px !important;
    }

    input[type='text'] {
      height: 24px;
      width: 40px;
      background: #fff;
    }

    [class*='MuiInputBase-root-'] {
      background: transparent !important;
    }

    [class*='MuiFormControl-root-'] {
      width: 50px !important;
      min-width: 50px !important;
      margin-right: 5px;
    }

    .buttonStyles {
      width: 24px;
      height: 25px;
      line-height: 45px;
      text-align: center;
      padding: 2px;
      border-radius: 50%;
      background-color: #595959;
      color: #fff;
      min-width: auto !important;
      left: 2px;
      margin-right: 10px;
      justify-content: center;

      svg {
        height: 16px;
        width: 16px;
      }
    }
  }
}

